Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71862

qtquickcompiler causes warning on Windows: C4245 (signed/unsigned mismatch)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.1
    • 5.9.7
    • QML: Compiler
    • None
    • Windows
    • 75937c9da7910ce41b4b3207d66d844ed9624df8

    Description

      When compiling QML with qtquickcompiler on Windows 8.1 using Visual Studio 2017, the following warning occurs:

      >...\include\qtqml\5.9.7\qtqml\private\qv4value_p.h(263): error C2220: warning treated as error - no 'object' file generated
      >...\include\qtqml\5.9.7\qtqml\private\qv4value_p.h(263): warning C4245: 'initializing': conversion from '__int64' to 'const quint64', signed/unsigned mismatch
      

      It is fixed by the following change to qv4value_p.h:

      -    static const quint64 NaNEncodeMask  = 0xfffc000000000000ll;
      +    static const quint64 NaNEncodeMask = 0xfffc000000000000ull;
      

      I will submit this in a code review shortly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erb Jason Erb (Suitable Technologies)
            erb Jason Erb (Suitable Technologies)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes