Fix signed/unsigned warning in VS 2017

Task-number: QTBUG-71862
Change-Id: I836756d004753420bfb7a00013ade0229bd5946e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>